--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@types/react": "^18.3.9",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "typescript": "5.5"
   },
@@ -24,6 +26,7 @@
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.11.1",
     "@typescript-eslint/parser": "^8.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.11.1",
     "eslint-plugin-expo": "^0.0.1",
     "eslint-plugin-react": "^7.36.1",
